--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'MyWebFont';
+    src: url('./AvenirLTStd-Book.otf') format('truetype'), /* Safari, Android, iOS */
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -12,48 +17,27 @@ body {
     height: 100vh;
     width: 100vw;
     position: relative;
+    background-color: black;
+    font-family: 'MyWebFont'
 }
 
-div {
+main {
     height: 80%;
     width: 80%;
+    margin-top: 20vh;
+    /* display: none; */
+    background-color: white;
 }
 
 .logo {
     position: absolute;
-    background-color: black;
 }
 
 .v {
-    height: 90%;
+    height: 80%;
     width: 10%;
-    top: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.h {
-    height: 10%;
-    width: 100%;
-}
-
-.t {
-    top: 0;
-    z-index: 1;
-    text-align: right;
-    display: flex;
-    justify-content: space-between;
-}
-
-.b {
-    bottom: 0;
-    z-index: 1;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    top: 20vh;
+    /* background-color: white; */
 }
 
 .r {
@@ -64,32 +48,42 @@ div {
     left: 0;
 }
 
-.q_logo {
-    margin-top: 0.5%;
-    margin-right: 1%;
-}
-
-.aso {
-    display: inline-block;
-    width: 10%;
-}
-
-.aso img {
-    display: block;
-    height: 100%;
-}
-
 ul {
     list-style: none;
-    text-align: center;
-    background-color: #f49c0f;
-    font-size: xx-large;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
-    width: 50%;
-    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding: 0 10%;
 }
 
-li {
-    text-align: center;
+.h {
+    height: 20%;
+    width: 100%;
+}
+
+.t {
+    top: 0;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    grid-gap: 1rem;
+}
+
+.t div {
+    color: white;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3vw;
+}
+
+img {
+    display: block;
+    height: 100%;
+    width: 100%;
 }
