--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     width: 100vw;
     position: relative;
     background-color: black;
-    font-family: 'MyWebFont'
+    /* font-family: 'MyWebFont' */
 }
 
 main {
@@ -37,7 +37,7 @@ main {
     height: 80%;
     width: 10%;
     top: 20vh;
-    /* background-color: white; */
+    background-color: white;
 }
 
 .r {
@@ -68,9 +68,8 @@ ul {
     top: 0;
     z-index: 1;
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 3fr;
     align-items: center;
-    grid-gap: 1rem;
 }
 
 .t div {
@@ -78,7 +77,7 @@ ul {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     font-size: 3vw;
 }
 
